# SmileX-Dict-Electron

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  PASSWORD_REQUIREMENTS.md  PASSWORD_VALIDATION.md  README.md  capacitor.config.ts  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  skills-lock.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
.kilo/: kilo.json
server/: .env.example  README.md  auth.py  db.py  main.py  models.py  pyproject.toml  requirements.txt  smilex.db  spider.py
server/app/: config.py  database.py  dependencies.py  logging_config.py  main.py
server/app/middleware/: __init__.py  error_handler.py  logging.py  rate_limit.py
server/app/models/: __init__.py  article.py  dict.py  dict_word.py  settings.py  stat.py  user.py  user_word_progress.py  word.py  word_example.py  word_grammar.py  word_meaning.py  word_phrase.py
server/app/routers/: articles.py  auth.py  data.py  dicts.py  learning.py  settings.py  stats.py  words.py
server/app/schemas/: __init__.py  article.py  auth.py  common.py  dict.py  learning.py  settings.py  stat.py  word.py
server/app/services/: article_service.py  auth_service.py  dict_service.py  import_service.py  learning_service.py  lookup_service.py  settings_service.py  stat_service.py  word_service.py
server/app/utils/: security.py
server/data/: smilex.db
server/migrations/: add_enhanced_fields.py  env.py  refactor_dict_structure.py
server/scripts/: seed_official_dicts.py  start.sh
server/tests/: conftest.py  test_auth.py  test_health.py
(+78 files in other folders)
