[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.115.5",
    "pydantic==2.9.2",
    "pydantic-settings>=2.0",
    "sqlalchemy==2.0.36",
    "uvicorn==0.32.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",
    "python-multipart==0.0.12",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "alembic>=1.13",
]

[project.optional-dependencies]
pytest = [
    "httpx>=0.27",
    "pytest>=8.0",
]
